Small fix for wrong Height of Website "This"

--- a/beta/css.css
+++ b/beta/css.css
@@ -116,13 +116,14 @@ h3 {
     margin-left: 10%;
 }
 #p2 {
-    float: right;
     font-family: open sans;
     font-size: 500%;
-    margin-top: 15%;
-    margin-right: 15%;
+    top: 25%;
+    right: 15%;
+    position: absolute;
 }
 .show2des {
+    float: right;
     font-family: open sans;
     font-size: 2500%;
     /*    color: grey;*/
